comment on url re-creating with stream handling