@@ -140,8 +140,7 @@ public class CatalogClasspathDo {
                     
                     // TODO potential disk leak above as we have no way to know when the temp file can be removed earlier than server shutdown;
                     // a better way to handle this is to supply a stream handler (but URLConnection is a little bit hard to work with):
-//                    URI uri = URI.create(classpath.getEntries().get(i));
-//                    urls[i] = new URL(uri.getScheme(), uri.getHost(), uri.getPort(), uri.getPath()  // TODO query fragment?
+//                    urls[i] = new URL(null, classpath.getEntries().get(i)   // (handy construtor for reparsing urls, without splitting into uri first)
 //                        , new URLStreamHandler() {
 //                            @Override
 //                            protected URLConnection openConnection(URL u) throws IOException {
